--- a/web/tjs/cond-a.html
+++ b/web/tjs/cond-a.html
@@ -15,9 +15,7 @@
 <!-- edit google form info here.. -->
 <h1>survey a..</h1>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd8KO4H-wbegbrdL2NYiB7EFLSGm-vF3_s28eDTE9bUlbXaXQ/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-<!-- width="640" height="832" -->
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfkP7zSatjKmF2Y21pOup3MdbZ_vuvakssd2TZGnenKxyQkVA/viewform?embedded=true" width="640" height="3952" frameborder="0" marginheight="0" marginwidth="0">Läser in …</iframe><!-- width="640" height="832" -->
 
 </div>
 </body>
