--- a/web/tjs/cond-b.html
+++ b/web/tjs/cond-b.html
@@ -15,9 +15,7 @@
 <!-- edit google form info here.. -->
 <h1>survey b..</h1>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeALtPcOCSyi4yJGEz131Vyr1sSflLuG2AX393f2JgU7ncnrg/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-<!-- width="640" height="832" -->
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScaOMQCgPkICNM0nsWnYFBrr3_PG7DfDLy4qrrFdSqqNGH5ZA/viewform?embedded=true" width="640" height="3916" frameborder="0" marginheight="0" marginwidth="0">Läser in …</iframe><!-- width="640" height="832" -->
 
 </div>
 </body>
